branch table eklentisi

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 <h1>
     my main githup project
     new branch brach
+    <table>
+        <td>
+            <tr>efe</tr>
+            <tr>sackan</tr>
+            <tr>naw branch</tr>
+        </td>
+    </table>
 </h1>
 </body>
 </html>
