--- a/index.html
+++ b/index.html
@@ -7,15 +7,9 @@
 </head>
 <body>
 <h1>
-    my main githup project
-    new branch brach
-    <table>
-        <td>
-            <tr>efe</tr>
-            <tr>sackan</tr>
-            <tr>naw branch</tr>
-        </td>
-    </table>
+    my main githup project <br>
+    new branch <br>
+    efe sackan
 </h1>
 </body>
 </html>
