branch one1 title degisikligi

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>main GİTHUP</title>
+    <title>ana branch one1 GİTHUP</title>
 </head>
 <body>
 <h1>
